--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/users/users.html
@@ -1,155 +1,180 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Shopme Admin Control Panel</title>
-  <link rel="stylesheet" type="text/css" th:href="@{/fontawesome/css/all.css}"/>
-  <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-  <link rel="stylesheet" type="text/css" th:href="@{style.css}"/>
+    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>Shopme Admin Control Panel</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/fontawesome/css/all.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{style.css}"/>
 
-  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
-  <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-  <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
 <body class="container-fluid">
 <div>
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-    <a class="navbar-brand" th:href="@{/}">
-      <img th:src="@{/images/ShopmeAdminSmall.png}" alt="shopme"/>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="topNavbar">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/users}">Users</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/categories}">Categories</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/brands}">Brands</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/products}">Products</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/customers}">Customers</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/orders}">Orders</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/shipping}">Shipping</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/sales-reports}">Sales Report</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/articles}">Articles</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/menus}">Menus</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/settings}">Settings</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <a class="navbar-brand" th:href="@{/}">
+            <img th:src="@{/images/ShopmeAdminSmall.png}" alt="shopme"/>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="topNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/users}">Users</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/categories}">Categories</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/brands}">Brands</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/products}">Products</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/customers}">Customers</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/orders}">Orders</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/shipping}">Shipping</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/sales-reports}">Sales Report</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/articles}">Articles</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/menus}">Menus</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/settings}">Settings</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </div>
 <div>
-  <h2>Manage Users</h2>
-  <a class="btn btn-primary mb-2" th:href="@{/users/new}">Create New User <i class="fas fa-plus"></i></a>
+    <h2>Manage Users</h2>
+    <a class="btn btn-primary mb-2" th:href="@{/users/new}">Create New User <i class="fas fa-plus"></i></a>
 </div>
 
-<div th:if="${message != null}" class="alert alert-success alert-dismissible fade show" role="alert" th:utext="${message}">
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
+<div th:if="${message != null}" class="alert alert-success alert-dismissible fade show" role="alert"
+     th:utext="${message}">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
 </div>
 <div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
-    <thead class="thead-dark">
-    <tr>
-      <th scope="col">ID</th>
-      <th scope="col">Photo</th>
-      <th scope="col">First Name</th>
-      <th scope="col">Last Name</th>
-      <th scope="col">Roles</th>
-      <th scope="col">Enabled</th>
-      <th scope="col">Action</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:class="${user.enabled ? 'table-success' :'table-danger'}" th:each="user :${userList}">
-      <th scope="row" th:text="${user.id}">1</th>
-      <td ><img th:if="${user.photo != null}" th:src="@{${user.photosPath}}" style="width: 100px" class="img-fluid img-thumbnail rounded"></td>
-      <td th:text="${user.firstName}"></td>
-      <td th:text="${user.lastName}"></td>
-      <td th:text="${user.roles}"></td>
-      <td class="text-center">
-        <a th:href="@{'/users/'+ ${user.id} +'/enabled/false'}" type="button" th:if="${user.enabled == true}" title="edit this user" class="fas fa-check-circle fa-2x icon-dark"></a>
-        <a th:href="@{'/users/'+ ${user.id} +'/enabled/true'}" type="button" th:if="${user.enabled == false}" class="fas fa-times-circle fa-2x icon-dark"></a>
-      </td>
-      <td class="text-center">
-        <a th:href="@{'/users/'+${user.id}+ '/edit'}" type="button" class="btn btn-success">Update <i class="fas fa-pencil-alt"></i></a>
-        <a th:href="@{'/users/'+${user.id}}" th:userId="${user.id}" type="button" class="btn btn-danger link-delete">Delete <i class="fas fa-trash-alt"></i></a>
-      </td>
-    </tr>
-    </tbody>
-    <tfoot>
-    <tr>
-      <th scope="col">ID</th>
-      <th scope="col">Photo</th>
-      <th scope="col">First Name</th>
-      <th scope="col">Last Name</th>
-      <th scope="col">Roles</th>
-      <th scope="col">Enabled</th>
-      <th scope="col">Action</th>
-    </tr>
-    </tfoot>
-  </table>
+    <table class="table table-striped table-bordered table-hover">
+        <thead class="thead-dark">
+        <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Photo</th>
+            <th scope="col">First Name</th>
+            <th scope="col">Last Name</th>
+            <th scope="col">Roles</th>
+            <th scope="col">Enabled</th>
+            <th scope="col">Action</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:class="${user.enabled ? 'table-success' :'table-danger'}" th:each="user :${userList}">
+            <th scope="row" th:text="${user.id}">1</th>
+            <td><img th:if="${user.photo != null}" th:src="@{${user.photosPath}}" style="width: 100px"
+                     class="img-fluid img-thumbnail rounded"></td>
+            <td th:text="${user.firstName}"></td>
+            <td th:text="${user.lastName}"></td>
+            <td th:text="${user.roles}"></td>
+            <td class="text-center">
+                <a th:href="@{'/users/'+ ${user.id} +'/enabled/false'}" type="button" th:if="${user.enabled == true}"
+                   title="edit this user" class="fas fa-check-circle fa-2x icon-dark"></a>
+                <a th:href="@{'/users/'+ ${user.id} +'/enabled/true'}" type="button" th:if="${user.enabled == false}"
+                   class="fas fa-times-circle fa-2x icon-dark"></a>
+            </td>
+            <td class="text-center">
+                <a th:href="@{'/users/'+${user.id}+ '/edit'}" type="button" class="btn btn-success">Update <i
+                        class="fas fa-pencil-alt"></i></a>
+                <a th:href="@{'/users/'+${user.id}}" th:userId="${user.id}" type="button"
+                   class="btn btn-danger link-delete">Delete <i class="fas fa-trash-alt"></i></a>
+            </td>
+        </tr>
+        </tbody>
+        <tfoot>
+        <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Photo</th>
+            <th scope="col">First Name</th>
+            <th scope="col">Last Name</th>
+            <th scope="col">Roles</th>
+            <th scope="col">Enabled</th>
+            <th scope="col">Action</th>
+        </tr>
+        </tfoot>
+    </table>
+</div>
+
+<div class="text-center" th:if="${totalElements>0}">
+    <p>Shwoing users # [[${startCount}]] to [[${endCount}]] of [[${totalElements}]]</p>
+</div>
+<div class="text-center" th:unless="${totalElements>0}">
+    <p>No Users found</p>
+</div>
+
+<div>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+            <li th:class="${currentPage > 1 ? 'page-item' :'page-item disabled'}"><a class="page-link" th:href="@{/users/page/1}">First</a></li>
+            <li th:class="${currentPage > 1 ? 'page-item' :'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/'+${currentPage - 1}}">Previous</a></li>
+            <li th:class="${currentPage == i ? 'page-item active' : 'page-item'}" th:each="i : ${#numbers.sequence(1,totalPages)}"><a class="page-link" th:href="@{'/users/page/'+${i}}">[[${i}]]</a></li>
+            <li th:class="${currentPage < totalPages ? 'page-item' :'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/' + ${currentPage + 1}}">Next</a></li>
+            <li th:class="${currentPage < totalPages ? 'page-item' :'page-item disabled'}"><a class="page-link" th:href="@{'/users/page/' + ${totalPages}}">Last</a></li>
+        </ul>
+    </nav>
 </div>
 
 <div class="modal fade text-center" id="confirmModal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">Delete Confirmation</h4>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-      </div>
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Delete Confirmation</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
 
-      <div class="modal-body">
-        <span id="confirmText"></span>
-      </div>
+            <div class="modal-body">
+                <span id="confirmText"></span>
+            </div>
 
-      <div class="modal-footer">
-        <a class="btn btn-success" href="" id="yesButton">Yes</a>
-        <button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
-      </div>
+            <div class="modal-footer">
+                <a class="btn btn-success" href="" id="yesButton">Yes</a>
+                <button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 
 <div class="text-center">Shopme Control Panel - Copyright &copy; Shopme</div>
 
 <script type="text/javascript">
-  $(document).ready(function(){
-    $('.link-delete').on("click",function(e){
-      e.preventDefault();
-      link=$(this);
-      userId=link.attr("userId");
-      $('#yesButton').attr('href',link.attr('href'))
-      $('#confirmText').text("Are you sure you want to delete this user id" + userId +"?");
-      $('#confirmModal').modal();
+    $(document).ready(function () {
+        $('.link-delete').on("click", function (e) {
+            e.preventDefault();
+            link = $(this);
+            userId = link.attr("userId");
+            $('#yesButton').attr('href', link.attr('href'))
+            $('#confirmText').text("Are you sure you want to delete this user id" + userId + "?");
+            $('#confirmModal').modal();
+        });
     });
-  });
 </script>
 </body>
 </html>
