--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/account/login.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/account/login.html
@@ -27,6 +27,9 @@
             <input type="password" name="password" class="form-control" id="password" placeholder="password" required>
         </p>
         <p>
+            <input type="checkbox" name="remember-me" id="remember-me" />&nbsp; <label for="remember-me">remember-me</label>
+        </p>
+        <p>
             <button type="submit" class="btn btn-primary">Login</button>
         </p>
     </div>
