--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
@@ -53,14 +53,14 @@
                     <a class="nav-link" th:href="@{/settings}">Settings</a>
                 </li>
                 <li class="nav-item">
-                    <span class="fa fa-user fa-2x text-success"></span>
+                    <span class="fa fa-circle fa-1x text-success mt-3"></span>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown"
                        th:href="@{/account}"
                        sec:authentication="principal.fullName"></a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" id="logoutLink" th:href="@{/logout}">Logout</a>
+                        <a class="dropdown-item" id="logoutLink" href="">Logout</a>
                     </div>
                 </li>
             </ul>
