--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
@@ -8,7 +8,10 @@
 <body class="container-fluid">
 <div th:replace="navigation ::  menu"/>
 <div>
-    <h1>Shopme Control Panel</h1>
+    <h2>Shopme Control Panel</h2>
+    Welcome
+    <a th:href="@{/account}" sec:authentication="principal.fullName"></a>
+    <span sec:authentication="principal.authorities"></span>
 </div>
 <div class="text-center" th:replace="fragments :: footer" />
 
