--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/navigation.html
@@ -19,39 +19,61 @@
         </button>
         <div class="collapse navbar-collapse" id="topNavbar">
             <ul class="navbar-nav">
+                <th:block sec:authorize="hasAnyAuthority('Admin')">
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/users}">Users</a>
                 </li>
+                </th:block>
+                <th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/categories}">Categories</a>
                 </li>
+                </th:block>
+                <th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/brands}">Brands</a>
                 </li>
+                </th:block>
+                <th:block sec:authorize="hasAnyAuthority('Admin', 'Editor','Salesperson','Shipper')">
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/products}">Products</a>
                 </li>
+                </th:block>
+                <th:block sec:authorize="hasAnyAuthority('Admin', 'Salesperson')">
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/customers}">Customers</a>
                 </li>
+                </th:block>
+                <th:block sec:authorize="hasAnyAuthority('Admin','Salesperson', 'Shipper')">
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/orders}">Orders</a>
                 </li>
+                </th:block>
+                <th:block sec:authorize="hasAnyAuthority('Admin', 'Salesperson')">
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/shipping}">Shipping</a>
                 </li>
+                </th:block>
+                <th:block sec:authorize="hasAnyAuthority('Admin', 'Salesperson')">
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/sales-reports}">Sales Report</a>
                 </li>
+                </th:block>
+                <th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/articles}">Articles</a>
                 </li>
+                </th:block>
+                <th:block sec:authorize="hasAnyAuthority('Admin', 'Editor')">
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/menus}">Menus</a>
                 </li>
+                </th:block>
+                <th:block sec:authorize="hasAnyAuthority('Admin')">
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/settings}">Settings</a>
                 </li>
+                </th:block>
                 <li class="nav-item">
                     <span class="fa fa-circle fa-1x text-success mt-3"></span>
                 </li>
