--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/categories/category_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/categories/category_form.html
@@ -5,7 +5,7 @@
 <div th:replace="navigation ::  menu"/>
 <div>
     <h3>Manage Categories | [[${pageTitle}]]</h3>
-    <form th:action="@{/catigories}" method="post" th:object="${category}" style="max-width: 700px; margin: 0 auto;"
+    <form th:action="@{/categories/store}" method="post" th:object="${category}" style="max-width: 700px; margin: 0 auto;"
           onsubmit="return checkIsEmailUnique(this);" enctype="multipart/form-data">
         <input type="hidden" th:field="*{id}">
         <div class="border border-secondary rounded p-3">
@@ -40,7 +40,7 @@
                 <label>Photo:</label>
                 <div class="col-sm-8">
                     <input type="hidden" th:field="*{image}"/>
-                    <input type="file" id="fileImage" name="image" accept="image/png, image/jpeg" class="m-2"/>
+                    <input type="file" id="fileImage" name="fileImage" accept="image/png, image/jpeg" class="m-2" required />
                     <img th:src="@{/images/image-thumbnail.png}" id="thumbnail"
                          class="img-fluid img-thumbnail rounded" width="100"/>
                 </div>
